src/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noxium-service
  labels:
    app: noxium
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5500
  selector:
    app: noxium
